# temperature-prediction

./: .gitignore  Dockerfile  README.md  data.csv  prediction_model.ipynb  pyproject.toml  temperature_prediction_model.pth
src/: app.py  schemas.py
src/temperature_forecast/: model.py
